[tool.poetry]
name = "chunknorris"
version = "0.1.0"
description = ""
authors = ["Francesco <francesco.209@gmail.com>"]
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.10"
typer = {extras = ["all"], version = "^0.6.1"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^22.6.0", allow-prereleases = true}

[tool.poetry.scripts]
chunknorris = "chunknorris.main:app"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
