[tool.poetry]
name = "chunknorris"
version = "1.0.0"
description = ""
authors = ["Francesco <francesco.209@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
typer = { extras = ["all"], version = "^0.9.0" }
cryptography = "^42.0.5"


[tool.poetry.group.dev.dependencies]
pylint = "^3.1.0"
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
chunknorris = 'chunknorris.main:app'
